virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vllm-lws
spec:
  gateways:
    - "istio-system/ezaf-gateway"
  hosts:
    - "vllm-lws.ezua.tf-ai.io"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: vllm-leader.vllm.svc.cluster.local
            port:
              number: 8080
